# mailman-ietf-styles

./: .gitignore  README.md  pyproject.toml
src/mailman_ietf_styles/: __init__.py  plugin.py
src/mailman_ietf_styles/styles/: __init__.py  ietf.py
tests/: test_styles.py
